button padding on mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -590,7 +590,7 @@ video {
     display: flex;
     justify-content: center;
     margin-right: 2rem;
-    margin-left: 2rem;
+    margin-left: 2rem !important;
   }
   .btn-round {
     margin-right: .5rem;
